@@ -1,3 +1,8 @@
+2009-11-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-eshell-directory-change): New defun.  Add it to
+	`eshell-directory-change-hook'.
+
 2009-11-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-shell-prompt-pattern): Use \r for carriage
